--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ PROD=false
 PORT=4000
 REQUEST_LIMIT=100kb
 JWT_SECRET=secret
-MONGO_DB=mongodb://localhost:27017/express-mongo-jwt
 RPC_URL=https://api.mainnet-beta.solana.com
+DB_NAME=temp
