--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "dependencies": {
+    "@honeycomb-protocol/hive-control": "^0.0.43",
+    "@mikro-orm/core": "^5.6.14",
+    "@mikro-orm/migrations": "^5.6.14",
+    "@mikro-orm/sqlite": "^5.6.14",
     "@project-serum/anchor": "^0.25.0",
+    "better-sqlite3": "^8.2.0",
+    "better-sqlite3-session-store": "^0.1.0",
+    "bs58": "^5.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.6",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
