--- a/projects.json
+++ b/projects.json
@@ -1,12 +1,12 @@
 {
   "devnet": {
-    "program": "43PZm3DUeGgopwzUzxt6x4g1vwt3ZCYe2mi6RM3S7jbs",
-    "address": "Fe2pai5gY8BWkNXXUU3PY4W9h1kULMMFBbKAVr4MJpW6",
-    "key": [
-      50, 17, 186, 0, 131, 220, 102, 30, 158, 45, 178, 201, 194, 191, 175, 41,
-      35, 83, 42, 65, 1, 161, 77, 241, 102, 92, 49, 64, 121, 255, 120, 218, 247,
-      249, 208, 194, 233, 140, 243, 140, 61, 250, 249, 111, 188, 255, 80, 126,
-      94, 83, 179, 190, 77, 113, 244, 192, 109, 10, 156, 207, 39, 229, 132, 221
+    "rpc": "https://lingering-newest-sheet.solana-devnet.quiknode.pro/fb6e6465df3955a06fd5ddec2e5b003896f56adb/",
+    "address": "EA6r5pBvKTfTo5UGBrAucHg7FRfaJWURsbWuageWeVRB",
+    "driver": [
+      54, 153, 176, 175, 143, 66, 38, 124, 48, 197, 178, 251, 55, 170, 218, 29,
+      233, 150, 146, 105, 110, 136, 96, 100, 172, 117, 127, 95, 87, 131, 71, 46,
+      86, 14, 126, 172, 101, 201, 242, 86, 160, 121, 127, 9, 224, 136, 44, 5,
+      50, 77, 76, 87, 242, 26, 150, 97, 251, 164, 173, 134, 126, 25, 246, 179
     ]
   }
 }
