--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "build": "npx tsc",
     "start": "npx tsc && node ./dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
-    "@honeycomb-protocol/hive-control": "^0.0.43",
+    "@honeycomb-protocol/hive-control": "^0.0.45",
     "@mikro-orm/core": "^5.6.14",
     "@mikro-orm/migrations": "^5.6.14",
     "@mikro-orm/sqlite": "^5.6.14",
