--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
-    "@honeycomb-protocol/hive-control": "^0.0.45",
+    "@honeycomb-protocol/hive-control": "^0.0.54",
     "@mikro-orm/core": "^5.6.14",
     "@mikro-orm/migrations": "^5.6.14",
     "@mikro-orm/sqlite": "^5.6.14",
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/express-session": "^1.17.6",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
     "nodemon": "^2.0.20",
