--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "ts-node": "^10.9.1",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
