--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ PROD=false
 PORT=4000
 REQUEST_LIMIT=100kb
 JWT_SECRET=secret
+SESSION_SECRET=secret
 RPC_URL=https://api.mainnet-beta.solana.com
 DB_NAME=temp
