--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PROD=false
 PORT=4000
 REQUEST_LIMIT=100kb
+CORS_ORIGINS=*
 JWT_SECRET=secret
 RPC_URL=https://api.mainnet-beta.solana.com
 DB_NAME=temp
